# advent-of-code

./: README.md  pyproject.toml  requirements.txt
aocvj/: main.py
aocvj/y2023/day1/: example.txt  puzzle.md  solver.py
aocvj/y2023/day10/: example.txt  puzzle.md  solver.py
aocvj/y2023/day11/: example.txt  puzzle.md  solver.py
aocvj/y2023/day12/: example.txt  puzzle.md  solver.py
aocvj/y2023/day13/: example.txt  puzzle.md  solver.py
aocvj/y2023/day14/: example.txt  puzzle.md  solver.py
aocvj/y2023/day15/: example.txt  puzzle.md  solver.py
aocvj/y2023/day16/: example.txt  puzzle.md  solver.py
aocvj/y2023/day17/: example.txt  puzzle.md  solver.py
aocvj/y2023/day18/: example.txt  puzzle.md  solver.py
aocvj/y2023/day19/: example.txt  puzzle.md  solver.py
aocvj/y2023/day2/: example.txt  puzzle.md  solver.py
aocvj/y2023/day20/: example.txt  puzzle.md  solver.py
aocvj/y2023/day21/: example.txt  puzzle.md
aocvj/y2023/day3/: example.txt  puzzle.md  solver.py
aocvj/y2023/day4/: example.txt  puzzle.md  solver.py
aocvj/y2023/day5/: example.txt  puzzle.md  solver.py
aocvj/y2023/day6/: example.txt  puzzle.md  solver.py
aocvj/y2023/day7/: example.txt  puzzle.md  solver.py
aocvj/y2023/day8/: example.txt  puzzle.md  solver.py
aocvj/y2023/day9/: example.txt  puzzle.md  solver.py
aocvj/y2024/day1/: example.txt  puzzle.md  solver.py
aocvj/y2024/day2/: example.txt  puzzle.md  solver.py
aocvj/y2024/day3/: example.txt  puzzle.md  solver.py
aocvj/y2024/day4/: example.txt  puzzle.md  solver.py
aocvj/y2024/day5/: example.txt  puzzle.md  solver.py
(+9 files in other folders)
